add some family post

--- a/_layouts/letter_post.html
+++ b/_layouts/letter_post.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/font-zh.css" type="text/css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/font-en.css" type="text/css" />
     <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/{{ page.cssType }}.css" type="text/css" />
+    <link rel="stylesheet" href="{{ site.baseurl }}/letter/static/css/print.{{ page.cssType }}.css" media="print" />
     <style type="text/css">
         .body .unit-body {
             padding: 1em;
